src/main/java/com/example/backend/domain/errors/NotFoundException.java
package com.example.backend.domain.errors;

public class NotFoundException extends RuntimeException {
  public NotFoundException(String message) {
    super(message);
  }

  public NotFoundException() {
    super("Resource not found");
  }
}
